syntax = "proto3";

package order;

import "base.proto";
import "google/protobuf/timestamp.proto";

option go_package = "fafnir/shared/pb/order";

service OrderService {
  rpc GetOrderById(GetOrderByIdRequest) returns (GetOrderByIdResponse);
  rpc GetOrdersByUserId(GetOrdersByUserIdRequest) returns (GetOrdersByUserIdResponse);
  rpc InsertOrder(InsertOrderRequest) returns (InsertOrderResponse);
  rpc CancelOrder(CancelOrderRequest) returns (CancelOrderResponse);
}

enum OrderSide {
  ORDER_SIDE_UNSPECIFIED = 0;
  ORDER_SIDE_BUY = 1;
  ORDER_SIDE_SELL = 2;
}

enum OrderType {
  ORDER_TYPE_UNSPECIFIED = 0;
  ORDER_TYPE_MARKET = 1;
  ORDER_TYPE_LIMIT = 2;
  ORDER_TYPE_STOP = 3;
  ORDER_TYPE_STOP_LIMIT = 4;
}

enum OrderStatus {
  ORDER_STATUS_UNSPECIFIED = 0;
  ORDER_STATUS_PENDING = 1;
  ORDER_STATUS_PARTIAL_FILL = 2;
  ORDER_STATUS_FILLED = 3;
  ORDER_STATUS_CANCELED = 4;
  ORDER_STATUS_REJECTED = 5;
}

message Order {
  string id = 1;
  string user_id = 2;
  string symbol = 3;
  OrderSide side = 4;
  OrderType type = 5;
  OrderStatus status = 6;
  double quantity = 7;
  double price = 8;
  double stop_price = 9;
  double filled_quantity = 10;
  double avg_fill_price = 11;
  google.protobuf.Timestamp created_at = 12;
  google.protobuf.Timestamp updated_at = 13;
}

message OrderFill {
  string id = 1;
  string order_id = 2;
  double fill_quantity = 3;
  double fill_price = 4;
  google.protobuf.Timestamp filled_at = 5;
}

message GetOrderByIdRequest {
  string order_id = 1;
}

message GetOrderByIdResponse {
  Order order = 1;
  base.ErrorCode code = 2;
}

message GetOrdersByUserIdRequest {
  string user_id = 1;
  int32 limit = 2;
  int32 offset = 3;
}

message GetOrdersByUserIdResponse {
  repeated Order orders = 1;
  int32 total_count = 2;
  base.ErrorCode code = 3;
}

message InsertOrderRequest {
  string user_id = 1;
  string symbol = 2;
  OrderSide side = 3;
  OrderType type = 4;
  OrderStatus status = 5;
  double quantity = 6;
  double price = 7;
  double stop_price = 8;
}

message InsertOrderResponse {
  Order order = 1;
  base.ErrorCode code = 2;
}

message CancelOrderRequest {
  string order_id = 1;
  string user_id = 2;
}

message CancelOrderResponse {
  Order order = 1;
  base.ErrorCode code = 2;
}

message OrderCreatedEvent {
  string order_id = 1;
  string user_id = 2;
  string symbol = 3;
  OrderSide side = 4;
  OrderType type = 5;
  OrderStatus status = 6;
  double quantity = 7;
  double price = 8;
  double stop_price = 9;
  google.protobuf.Timestamp created_at = 10;
}

message OrderFilledEvent {
  string order_id = 1;
  string user_id = 2;
  string symbol = 3;
  double fill_quantity = 4;
  double fill_price = 5;
  google.protobuf.Timestamp filled_at = 6;
}

message OrderCancelledEvent {
  string order_id = 1;
  string user_id = 2;
  string symbol = 3;
  OrderSide side = 4;
  OrderStatus status = 5;
  google.protobuf.Timestamp cancelled_at = 6;
}
